deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorefrontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gorefrontend
  template:
    metadata:
      labels:
        app: gorefrontend
    spec:
      containers:
        - name: gorefrontend
          image: casperjes/peakproof-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
