deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gorefrontend-service
  namespace: frontend
spec:
  type: ClusterIP
  selector:
    app: gorefrontend
  ports:
    - name: http
      port: 80
      targetPort: 80
